--- a/frontend.ipynb
+++ b/frontend.ipynb
@@ -57,48 +57,48 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-22T09:58:30.571384Z",
-     "start_time": "2025-01-22T09:58:30.483848Z"
+     "end_time": "2025-01-22T10:21:05.049442Z",
+     "start_time": "2025-01-22T10:21:04.962613Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "public1 = pd.read_excel(\"DISTRICT AND PUBLIC DATA BASE 31012024.xlsx\",sheet_name=\"DO NOT TOUCH_2021 to 23 data\")\n",
-    "public1\n",
-    "\n"
+    "\n",
+    "public = pd.read_excel(\"DISTRICT AND PUBLIC DATA BASE 24122024.xlsx\",sheet_name=\"DO NOT TOUCH_2021 to 24 data\")\n",
+    "public\n"
    ],
    "id": "48bb2c9beb3376e2",
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "           AADHAR No   AADHAR No.1   Len            NAME  \\\n",
-       "0     9292 9645 9071  929296459071  12.0   M.KARTHIKEYAN   \n",
-       "1     2062 6807 0869  206268070869  12.0    S.RAJESHWARI   \n",
-       "2     2593 5886 7697  259358867697  12.0   M.PAECHIMUTHU   \n",
-       "3     3636 6154 9968  363661549968  12.0          M.DEVI   \n",
-       "4     5263 3195 0205  526331950205  12.0  A.THIYAGARAJAN   \n",
-       "...              ...           ...   ...             ...   \n",
-       "1008             NaN  450026695024   NaN          S.Hari   \n",
-       "1009             NaN  331749803100   NaN  M.Bagyalakshmi   \n",
-       "1010             NaN  930634438655   NaN         M.Valli   \n",
-       "1011             NaN  408937849173   NaN   P.Gangadharan   \n",
-       "1012             NaN  661343939858   NaN   BASKAR SELVAM   \n",
+       "           AADHAR No     AADHAR No.1   Len            NAME  \\\n",
+       "0     9292 9645 9071    929296459071  12.0   M.KARTHIKEYAN   \n",
+       "1     2062 6807 0869    206268070869  12.0    S.RAJESHWARI   \n",
+       "2     2593 5886 7697    259358867697  12.0   M.PAECHIMUTHU   \n",
+       "3     3636 6154 9968    363661549968  12.0          M.DEVI   \n",
+       "4     5263 3195 0205    526331950205  12.0  A.THIYAGARAJAN   \n",
+       "...              ...             ...   ...             ...   \n",
+       "1153             NaN    345233414455   NaN          Dinesh   \n",
+       "1154             NaN    363030001363   NaN         S.Anjan   \n",
+       "1155             NaN  9417 6165 4055   NaN       Gajendran   \n",
+       "1156             NaN    382908683958   NaN     G.Sakkubhai   \n",
+       "1157             NaN    353590938417   NaN       R. Sahana   \n",
        "\n",
-       "                 BENEFICIARY ITEM  YEAR Category Selection Status\\nYes / No  \n",
-       "0              Push cart with Top  2021      NaN                        NaN  \n",
-       "1            Battery  and Charger  2021      NaN                        NaN  \n",
-       "2          Powered Sewing Machine  2021      NaN                        NaN  \n",
-       "3                  Sewing Machine  2021      NaN                        NaN  \n",
-       "4              Push cart with Top  2021      NaN                        NaN  \n",
-       "...                           ...   ...      ...                        ...  \n",
-       "1008                  Gents Cycle  2023   Public                        Yes  \n",
-       "1009                  Girls Cycle  2023   Public                        Yes  \n",
-       "1010                  Girls Cycle  2023   Public                        Yes  \n",
-       "1011                          Tab  2023   Public                        Yes  \n",
-       "1012  Two wheeler (Rs.25000 cash)  2023   Public                        NaN  \n",
+       "            BENEFICIARY ITEM  YEAR Category Selection Status\\nYes / No  \n",
+       "0         Push cart with Top  2021      NaN                        NaN  \n",
+       "1       Battery  and Charger  2021      NaN                        NaN  \n",
+       "2     Powered Sewing Machine  2021      NaN                        NaN  \n",
+       "3             Sewing Machine  2021      NaN                        NaN  \n",
+       "4         Push cart with Top  2021      NaN                        NaN  \n",
+       "...                      ...   ...      ...                        ...  \n",
+       "1153             Gents Cycle  2024   Public                        NaN  \n",
+       "1154             Gents Cycle  2024   Public                        NaN  \n",
+       "1155             Medical Aid  2024   Public                        NaN  \n",
+       "1156        Tabletop Grinder  2024   Public                        NaN  \n",
+       "1157              Lenove Tab  2024   Public                        NaN  \n",
        "\n",
-       "[1013 rows x 8 columns]"
+       "[1158 rows x 8 columns]"
       ],
       "text/html": [
        "<div>\n",
@@ -197,145 +197,72 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1008</th>\n",
+       "      <th>1153</th>\n",
        "      <td>NaN</td>\n",
-       "      <td>450026695024</td>\n",
+       "      <td>345233414455</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>S.Hari</td>\n",
+       "      <td>Dinesh</td>\n",
        "      <td>Gents Cycle</td>\n",
-       "      <td>2023</td>\n",
+       "      <td>2024</td>\n",
        "      <td>Public</td>\n",
-       "      <td>Yes</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1009</th>\n",
+       "      <th>1154</th>\n",
        "      <td>NaN</td>\n",
-       "      <td>331749803100</td>\n",
+       "      <td>363030001363</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>M.Bagyalakshmi</td>\n",
-       "      <td>Girls Cycle</td>\n",
-       "      <td>2023</td>\n",
+       "      <td>S.Anjan</td>\n",
+       "      <td>Gents Cycle</td>\n",
+       "      <td>2024</td>\n",
        "      <td>Public</td>\n",
-       "      <td>Yes</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1010</th>\n",
+       "      <th>1155</th>\n",
        "      <td>NaN</td>\n",
-       "      <td>930634438655</td>\n",
+       "      <td>9417 6165 4055</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>M.Valli</td>\n",
-       "      <td>Girls Cycle</td>\n",
-       "      <td>2023</td>\n",
+       "      <td>Gajendran</td>\n",
+       "      <td>Medical Aid</td>\n",
+       "      <td>2024</td>\n",
        "      <td>Public</td>\n",
-       "      <td>Yes</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1011</th>\n",
+       "      <th>1156</th>\n",
        "      <td>NaN</td>\n",
-       "      <td>408937849173</td>\n",
+       "      <td>382908683958</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>P.Gangadharan</td>\n",
-       "      <td>Tab</td>\n",
-       "      <td>2023</td>\n",
+       "      <td>G.Sakkubhai</td>\n",
+       "      <td>Tabletop Grinder</td>\n",
+       "      <td>2024</td>\n",
        "      <td>Public</td>\n",
-       "      <td>Yes</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1012</th>\n",
+       "      <th>1157</th>\n",
        "      <td>NaN</td>\n",
-       "      <td>661343939858</td>\n",
+       "      <td>353590938417</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>BASKAR SELVAM</td>\n",
-       "      <td>Two wheeler (Rs.25000 cash)</td>\n",
-       "      <td>2023</td>\n",
+       "      <td>R. Sahana</td>\n",
+       "      <td>Lenove Tab</td>\n",
+       "      <td>2024</td>\n",
        "      <td>Public</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1013 rows × 8 columns</p>\n",
+       "<p>1158 rows × 8 columns</p>\n",
        "</div>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 11
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": [
-    "public2 = pd.read_excel(\"DISTRICT AND PUBLIC DATA BASE 31012024.xlsx\",sheet_name=\"DO NOT TOUCH_2021 to 23 data\")\n",
-    "public2"
-   ],
-   "id": "98e393e1a9ccf2d2"
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-01-22T09:58:50.286178Z",
-     "start_time": "2025-01-22T09:58:50.278401Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "public1[public1[\"AADHAR No.1\"]== \"780149866273\"][[\"NAME\",\"BENEFICIARY ITEM\",\"YEAR\",\"Selection Status\\nYes / No\"]]",
-   "id": "595b980b6cee16dc",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "             NAME BENEFICIARY ITEM  YEAR Selection Status\\nYes / No\n",
-       "1002  T.Vigneswar           Laptop  2023                        Yes"
-      ],
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>NAME</th>\n",
-       "      <th>BENEFICIARY ITEM</th>\n",
-       "      <th>YEAR</th>\n",
-       "      <th>Selection Status\\nYes / No</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1002</th>\n",
-       "      <td>T.Vigneswar</td>\n",
-       "      <td>Laptop</td>\n",
-       "      <td>2023</td>\n",
-       "      <td>Yes</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 13
+   "execution_count": 16
   },
   {
    "metadata": {
@@ -345,7 +272,7 @@
     }
    },
    "cell_type": "code",
-   "source": "public1.columns\n",
+   "source": "\n",
    "id": "446c69f7a5f4252d",
    "outputs": [
     {
