--- a/frontend.ipynb
+++ b/frontend.ipynb
@@ -150,7 +150,19 @@
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
-   "source": "",
+   "source": [
+    "# # downloading\n",
+    "# file_id = 'file_id_to_download'\n",
+    "# file_path = 'path/to/save/downloaded/file.txt'\n",
+    "#\n",
+    "# request = drive_service.files().get_media(fileId=file_id)\n",
+    "# fh = io.FileIO(file_path, mode='wb')\n",
+    "# downloader = MediaIoBaseDownload(fh, request)\n",
+    "# done = False\n",
+    "#\n",
+    "# while not done:\n",
+    "#     status, done = downloader.next_chunk()"
+   ],
    "id": "d95623f2354cc73"
   }
  ],
