--- a/frontend.ipynb
+++ b/frontend.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-01-22T11:14:01.215390Z",
-     "start_time": "2025-01-22T11:14:01.211961Z"
+     "end_time": "2025-01-23T06:58:03.474583Z",
+     "start_time": "2025-01-23T06:58:02.856122Z"
     }
    },
    "source": [
@@ -20,147 +20,209 @@
     "from pydrive2.drive import GoogleDrive"
    ],
    "outputs": [],
-   "execution_count": 19
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-22T09:58:39.836737Z",
-     "start_time": "2025-01-22T09:58:39.833173Z"
+     "end_time": "2025-01-23T06:58:03.679618Z",
+     "start_time": "2025-01-23T06:58:03.479780Z"
     }
    },
    "cell_type": "code",
-   "source": [
-    "# Authenticate Google Drive\n",
-    "def authenticate_service_account():\n",
-    "    gauth = GoogleAuth()\n",
-    "    gauth.ServiceAuth()  # Authenticate using the service account credentials\n",
-    "    drive = GoogleDrive(gauth)\n",
-    "    return drive\n",
-    "\n",
-    "\n",
-    "# Save `saved_data.csv` to Google Drive\n",
-    "def save_to_drive(drive, local_file, drive_file_name, folder_id=None):\n",
-    "    query = f\"title='{drive_file_name}' and trashed=false\"\n",
-    "    if folder_id:\n",
-    "        query += f\" and '{folder_id}' in parents\"\n",
-    "    file_list = drive.ListFile({'q': query}).GetList()\n",
-    "\n",
-    "    if file_list:\n",
-    "        file = file_list[0]\n",
-    "        file.SetContentFile(local_file)\n",
-    "        file.Upload()\n",
-    "        st.success(f\"File '{drive_file_name}' updated in Google Drive.\")\n",
-    "    else:\n",
-    "        file_metadata = {'title': drive_file_name}\n",
-    "        if folder_id:\n",
-    "            file_metadata['parents'] = [{'id': folder_id}]\n",
-    "        file = drive.CreateFile(file_metadata)\n",
-    "        file.SetContentFile(local_file)\n",
-    "        file.Upload()\n",
-    "        st.success(f\"File '{drive_file_name}' uploaded to Google Drive.\")\n",
-    "\n",
-    "\n",
-    "drive = authenticate_service_account()\n",
-    "\n",
-    "\n",
-    "save_to_drive(drive, saved_data_file, saved_data_file)\n",
-    "st.success(\"Data saved to Google Drive!\")\n",
-    "\n"
-   ],
-   "id": "446c69f7a5f4252d",
+   "source": "pd.read_excel(\"Public_Beneficiary_21_24.xlsx\")",
+   "id": "31842f170ea2a09d",
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['AADHAR No', 'AADHAR No.1', 'Len', 'NAME', 'BENEFICIARY ITEM', 'YEAR',\n",
-       "       'Category', 'Selection Status\\nYes / No'],\n",
-       "      dtype='object')"
+       "           AADHAR No     AADHAR No.1   Len            NAME  \\\n",
+       "0     9292 9645 9071    929296459071  12.0   M.KARTHIKEYAN   \n",
+       "1     2062 6807 0869    206268070869  12.0    S.RAJESHWARI   \n",
+       "2     2593 5886 7697    259358867697  12.0   M.PAECHIMUTHU   \n",
+       "3     3636 6154 9968    363661549968  12.0          M.DEVI   \n",
+       "4     5263 3195 0205    526331950205  12.0  A.THIYAGARAJAN   \n",
+       "...              ...             ...   ...             ...   \n",
+       "1153             NaN    345233414455   NaN          Dinesh   \n",
+       "1154             NaN    363030001363   NaN         S.Anjan   \n",
+       "1155             NaN  9417 6165 4055   NaN       Gajendran   \n",
+       "1156             NaN    382908683958   NaN     G.Sakkubhai   \n",
+       "1157             NaN    353590938417   NaN       R. Sahana   \n",
+       "\n",
+       "            BENEFICIARY ITEM  YEAR Category  \n",
+       "0         Push cart with Top  2021      NaN  \n",
+       "1       Battery  and Charger  2021      NaN  \n",
+       "2     Powered Sewing Machine  2021      NaN  \n",
+       "3             Sewing Machine  2021      NaN  \n",
+       "4         Push cart with Top  2021      NaN  \n",
+       "...                      ...   ...      ...  \n",
+       "1153             Gents Cycle  2024   Public  \n",
+       "1154             Gents Cycle  2024   Public  \n",
+       "1155             Medical Aid  2024   Public  \n",
+       "1156        Tabletop Grinder  2024   Public  \n",
+       "1157              Lenove Tab  2024   Public  \n",
+       "\n",
+       "[1158 rows x 7 columns]"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>AADHAR No</th>\n",
+       "      <th>AADHAR No.1</th>\n",
+       "      <th>Len</th>\n",
+       "      <th>NAME</th>\n",
+       "      <th>BENEFICIARY ITEM</th>\n",
+       "      <th>YEAR</th>\n",
+       "      <th>Category</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>9292 9645 9071</td>\n",
+       "      <td>929296459071</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>M.KARTHIKEYAN</td>\n",
+       "      <td>Push cart with Top</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2062 6807 0869</td>\n",
+       "      <td>206268070869</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>S.RAJESHWARI</td>\n",
+       "      <td>Battery  and Charger</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2593 5886 7697</td>\n",
+       "      <td>259358867697</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>M.PAECHIMUTHU</td>\n",
+       "      <td>Powered Sewing Machine</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3636 6154 9968</td>\n",
+       "      <td>363661549968</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>M.DEVI</td>\n",
+       "      <td>Sewing Machine</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5263 3195 0205</td>\n",
+       "      <td>526331950205</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>A.THIYAGARAJAN</td>\n",
+       "      <td>Push cart with Top</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1153</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>345233414455</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Dinesh</td>\n",
+       "      <td>Gents Cycle</td>\n",
+       "      <td>2024</td>\n",
+       "      <td>Public</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1154</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>363030001363</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>S.Anjan</td>\n",
+       "      <td>Gents Cycle</td>\n",
+       "      <td>2024</td>\n",
+       "      <td>Public</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1155</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>9417 6165 4055</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Gajendran</td>\n",
+       "      <td>Medical Aid</td>\n",
+       "      <td>2024</td>\n",
+       "      <td>Public</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1156</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>382908683958</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>G.Sakkubhai</td>\n",
+       "      <td>Tabletop Grinder</td>\n",
+       "      <td>2024</td>\n",
+       "      <td>Public</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1157</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>353590938417</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>R. Sahana</td>\n",
+       "      <td>Lenove Tab</td>\n",
+       "      <td>2024</td>\n",
+       "      <td>Public</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1158 rows × 7 columns</p>\n",
+       "</div>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 12
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-01-22T11:41:57.722775Z",
-     "start_time": "2025-01-22T11:41:54.407033Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "from googleapiclient.http import MediaFileUpload\n",
-    "from googleapiclient.discovery import build\n",
-    "from google.oauth2 import service_account\n",
-    "\n",
-    "creds = service_account.Credentials.from_service_account_file(\n",
-    "    'mnpdatabase-4c0143764944.json',\n",
-    "    scopes=['https://www.googleapis.com/auth/drive']\n",
-    ")\n",
-    "print(creds)\n",
-    "drive_service = build('drive', 'v3', credentials=creds)\n",
-    "print(drive_service)\n",
-    "file_metadata = {\n",
-    "    'name': 'articles.csv',\n",
-    "    'parents': ['1ritUg2jlAaf2GsiKWndw93_i9Y6yy0ll']  # ID of the folder where you want to upload\n",
-    "}\n",
-    "\n",
-    "print(file_metadata)\n",
-    "file_path = 'articles.csv'\n",
-    "\n",
-    "media = MediaFileUpload(file_path, mimetype='text/csv')\n",
-    "\n",
-    "file = drive_service.files().create(body=file_metadata, media_body=media, fields='id').execute()\n",
-    "file"
-   ],
-   "id": "1580431a3c0ba4be",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<google.oauth2.service_account.Credentials object at 0x000002D62B8472F0>\n",
-      "<googleapiclient.discovery.Resource object at 0x000002D62B81E710>\n",
-      "{'name': 'articles.csv', 'parents': ['1ritUg2jlAaf2GsiKWndw93_i9Y6yy0ll']}\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'id': '1OKNqgWm8OiI8XaPXyMScSx1lhs5W3zth'}"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 28
+   "execution_count": 3
   },
   {
    "metadata": {},
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
-   "source": [
-    "# # downloading\n",
-    "# file_id = 'file_id_to_download'\n",
-    "# file_path = 'path/to/save/downloaded/file.txt'\n",
-    "#\n",
-    "# request = drive_service.files().get_media(fileId=file_id)\n",
-    "# fh = io.FileIO(file_path, mode='wb')\n",
-    "# downloader = MediaIoBaseDownload(fh, request)\n",
-    "# done = False\n",
-    "#\n",
-    "# while not done:\n",
-    "#     status, done = downloader.next_chunk()"
-   ],
-   "id": "d95623f2354cc73"
+   "source": "",
+   "id": "5454fb9c41cabfc9"
   }
  ],
  "metadata": {
