--- a/codes/frontend.ipynb
+++ b/codes/frontend.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-01-24T04:18:51.295732Z",
-     "start_time": "2025-01-24T04:18:51.292854Z"
+     "end_time": "2025-01-27T13:16:54.854335Z",
+     "start_time": "2025-01-27T13:16:54.377962Z"
     }
    },
    "source": [
@@ -17,24 +17,26 @@
     "import pandas as pd\n",
     "import os\n",
     "from pydrive2.auth import GoogleAuth\n",
-    "from pydrive2.drive import GoogleDrive\n"
+    "from pydrive2.drive import GoogleDrive\n",
+    "\n",
+    "from frontend import aadhar\n"
    ],
    "outputs": [],
-   "execution_count": 7
+   "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-24T04:18:52.088216Z",
-     "start_time": "2025-01-24T04:18:52.008948Z"
+     "end_time": "2025-01-27T13:16:55.166373Z",
+     "start_time": "2025-01-27T13:16:54.988786Z"
     }
    },
    "cell_type": "code",
    "source": [
     "# Load Data\n",
-    "article = pd.read_csv(\"articles.csv\")\n",
-    "district = pd.read_csv(\"District_beneficiary.csv\")\n",
-    "public = pd.read_excel(\"Public_Beneficiary_21_24.xlsx\")\n",
+    "article = pd.read_csv(\"/Users/aswathshakthi/PycharmProjects/MNP25/data/articles.csv\")\n",
+    "district = pd.read_csv(\"/Users/aswathshakthi/PycharmProjects/MNP25/data/District_beneficiary.csv\")\n",
+    "public = pd.read_excel(\"/Users/aswathshakthi/PycharmProjects/MNP25/data/Public_Beneficiary_21_24.xlsx\")\n",
     "\n",
     "\n",
     "\n",
@@ -125,13 +127,13 @@
      ]
     }
    ],
-   "execution_count": 8
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-24T04:18:52.910791Z",
-     "start_time": "2025-01-24T04:18:52.903687Z"
+     "end_time": "2025-01-27T13:16:56.490834Z",
+     "start_time": "2025-01-27T13:16:56.481654Z"
     }
    },
    "cell_type": "code",
@@ -253,18 +255,18 @@
        "</div>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 9
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-24T04:18:54.009993Z",
-     "start_time": "2025-01-24T04:18:54.002368Z"
+     "end_time": "2025-01-27T13:16:57.343270Z",
+     "start_time": "2025-01-27T13:16:57.336257Z"
     }
    },
    "cell_type": "code",
@@ -386,18 +388,18 @@
        "</div>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 10
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-25T12:31:50.535954Z",
-     "start_time": "2025-01-25T12:31:49.506597Z"
+     "end_time": "2025-01-27T13:16:58.554674Z",
+     "start_time": "2025-01-27T13:16:58.294109Z"
     }
    },
    "cell_type": "code",
@@ -423,7 +425,7 @@
     "public_data_id = \"1sO08BfwN1gzNs_N7XDq1RnqMgJDDKMdq_nsaNhmjKhs\"\n",
     "\n",
     "## Access API from local json\n",
-    "creds = service_account.Credentials.from_service_account_file('mnpdatabase-ca1a93fefdd6.json',\n",
+    "creds = service_account.Credentials.from_service_account_file('/Users/aswathshakthi/PycharmProjects/MNP25/mnpdatabase-ca1a93fefdd6.json',\n",
     "        scopes=['https://www.googleapis.com/auth/drive'])\n",
     "\n",
     "## Access via streamlit secrets\n",
@@ -437,20 +439,22 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-01-25 18:01:50.234 WARNING streamlit.runtime.scriptrunner_utils.script_run_context: Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2025-01-25 18:01:50.238 WARNING streamlit.runtime.scriptrunner_utils.script_run_context: Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2025-01-25 18:01:50.241 WARNING streamlit.runtime.scriptrunner_utils.script_run_context: Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2025-01-25 18:01:50.244 WARNING streamlit.runtime.scriptrunner_utils.script_run_context: Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n"
+      "2025-01-27 18:46:58.400 WARNING streamlit.runtime.scriptrunner_utils.script_run_context: Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-01-27 18:46:58.404 WARNING streamlit.runtime.scriptrunner_utils.script_run_context: Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-01-27 18:46:58.406 WARNING streamlit.runtime.scriptrunner_utils.script_run_context: Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-01-27 18:46:58.408 WARNING streamlit.runtime.scriptrunner_utils.script_run_context: Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "/Users/aswathshakthi/PycharmProjects/MNP25/venv/lib/python3.9/site-packages/urllib3/__init__.py:35: NotOpenSSLWarning: urllib3 v2 only supports OpenSSL 1.1.1+, currently the 'ssl' module is compiled with 'LibreSSL 2.8.3'. See: https://github.com/urllib3/urllib3/issues/3020\n",
+      "  warnings.warn(\n"
      ]
     }
    ],
-   "execution_count": 2
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-25T12:31:50.545987Z",
-     "start_time": "2025-01-25T12:31:50.541725Z"
+     "end_time": "2025-01-27T13:17:02.459718Z",
+     "start_time": "2025-01-27T13:17:02.455255Z"
     }
    },
    "cell_type": "code",
@@ -479,13 +483,13 @@
    ],
    "id": "b91383a2f14f9e9c",
    "outputs": [],
-   "execution_count": 3
+   "execution_count": 6
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-25T12:31:50.558302Z",
-     "start_time": "2025-01-25T12:31:50.554615Z"
+     "end_time": "2025-01-27T13:17:03.277144Z",
+     "start_time": "2025-01-27T13:17:03.272537Z"
     }
    },
    "cell_type": "code",
@@ -508,13 +512,13 @@
    ],
    "id": "7e0f53c1dfd3e919",
    "outputs": [],
-   "execution_count": 4
+   "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-25T12:31:50.572122Z",
-     "start_time": "2025-01-25T12:31:50.567195Z"
+     "end_time": "2025-01-27T13:17:04.151133Z",
+     "start_time": "2025-01-27T13:17:04.147443Z"
     }
    },
    "cell_type": "code",
@@ -531,18 +535,18 @@
        "'P 002'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 5
+   "execution_count": 8
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-25T12:37:28.692126Z",
-     "start_time": "2025-01-25T12:37:26.403111Z"
+     "end_time": "2025-01-27T13:17:07.924018Z",
+     "start_time": "2025-01-27T13:17:04.975073Z"
     }
    },
    "cell_type": "code",
@@ -566,11 +570,19 @@
     {
      "data": {
       "text/plain": [
-       "  App. No.  Name  Aadhar (Without Space)  Handicapped (Yes / No)  Address  \\\n",
-       "0    P 001   NaN                     NaN                     NaN      NaN   \n",
+       "  App. No.      Name  Aadhar (Without Space) Handicapped (Yes / No)  Address  \\\n",
+       "0    P 001    Aswath                   11111                     No      NaN   \n",
+       "1    P 002   Shakthi                   22222                     No      NaN   \n",
+       "2    P 003  John Doe                   33333                     No      NaN   \n",
+       "3    P 004     Smith                   44444                     No      NaN   \n",
+       "4    P 005    Andrew                    3636                     No      NaN   \n",
        "\n",
-       "   Mobile  Article Name  Comments  \n",
-       "0     NaN           NaN       NaN  "
+       "   Mobile                 Article Name Comments  \n",
+       "0     NaN    Handicapped Hand Tricycle      NaN  \n",
+       "1     NaN         Weed Cutting Machine      NaN  \n",
+       "2     NaN         Weed Cutting Machine      NaN  \n",
+       "3     NaN         Weed Cutting Machine      NaN  \n",
+       "4     NaN  Education Aid for Adhithyan     help  "
       ],
       "text/html": [
        "<div>\n",
@@ -605,31 +617,75 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>P 001</td>\n",
+       "      <td>Aswath</td>\n",
+       "      <td>11111</td>\n",
+       "      <td>No</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>Handicapped Hand Tricycle</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>P 002</td>\n",
+       "      <td>Shakthi</td>\n",
+       "      <td>22222</td>\n",
+       "      <td>No</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>Weed Cutting Machine</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>P 003</td>\n",
+       "      <td>John Doe</td>\n",
+       "      <td>33333</td>\n",
+       "      <td>No</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>Weed Cutting Machine</td>\n",
        "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>P 004</td>\n",
+       "      <td>Smith</td>\n",
+       "      <td>44444</td>\n",
+       "      <td>No</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Weed Cutting Machine</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>P 005</td>\n",
+       "      <td>Andrew</td>\n",
+       "      <td>3636</td>\n",
+       "      <td>No</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Education Aid for Adhithyan</td>\n",
+       "      <td>help</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 19
+   "execution_count": 9
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-25T12:38:10.355448Z",
-     "start_time": "2025-01-25T12:38:10.352144Z"
+     "end_time": "2025-01-27T13:17:11.900189Z",
+     "start_time": "2025-01-27T13:17:11.896543Z"
     }
    },
    "cell_type": "code",
@@ -648,34 +704,174 @@
      ]
     }
    ],
-   "execution_count": 20
+   "execution_count": 10
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-25T12:33:49.700030Z",
-     "start_time": "2025-01-25T12:33:49.695729Z"
+     "end_time": "2025-01-27T13:17:42.360567Z",
+     "start_time": "2025-01-27T13:17:42.358172Z"
     }
    },
    "cell_type": "code",
    "source": [
     "\n",
-    "public_master[\"Aadhar (Without Space)\"]"
+    "aadhar = \"111\""
    ],
    "id": "2e21ed808f8ffbec",
+   "outputs": [],
+   "execution_count": 11
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-27T13:17:44.656052Z",
+     "start_time": "2025-01-27T13:17:44.652940Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "public_master.loc[public_master[\"App. No.\"] == app_no, \"Aadhar (Without Space)\"] = aadhar\n",
+    "\n",
+    "public_master.loc[public_master[\"App. No.\"] == app_no, \"Aadhar (Without Space)\"] = aadhar"
+   ],
+   "id": "37e6700d7246be33",
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/v_/00jh03xj7ln1tm7xb4vvnwg40000gn/T/ipykernel_2593/650202637.py:1: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value '111' has dtype incompatible with int64, please explicitly cast to a compatible dtype first.\n",
+      "  public_master.loc[public_master[\"App. No.\"] == app_no, \"Aadhar (Without Space)\"] = aadhar\n"
+     ]
+    }
+   ],
+   "execution_count": 12
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-27T13:19:41.465602Z",
+     "start_time": "2025-01-27T13:19:41.457866Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "public_master\n",
+   "id": "8d7d83c21af67b7",
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Series([], Name: Aadhar (Without Space), dtype: object)"
+       "  App. No.      Name Aadhar (Without Space) Handicapped (Yes / No)  Address  \\\n",
+       "0    P 001    Aswath                    111                     No      NaN   \n",
+       "1    P 002   Shakthi                  22222                     No      NaN   \n",
+       "2    P 003  John Doe                  33333                     No      NaN   \n",
+       "3    P 004     Smith                  44444                     No      NaN   \n",
+       "4    P 005    Andrew                   3636                     No      NaN   \n",
+       "\n",
+       "   Mobile                 Article Name Comments  \n",
+       "0     NaN    Handicapped Hand Tricycle      NaN  \n",
+       "1     NaN         Weed Cutting Machine      NaN  \n",
+       "2     NaN         Weed Cutting Machine      NaN  \n",
+       "3     NaN         Weed Cutting Machine      NaN  \n",
+       "4     NaN  Education Aid for Adhithyan     help  "
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>App. No.</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Aadhar (Without Space)</th>\n",
+       "      <th>Handicapped (Yes / No)</th>\n",
+       "      <th>Address</th>\n",
+       "      <th>Mobile</th>\n",
+       "      <th>Article Name</th>\n",
+       "      <th>Comments</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>P 001</td>\n",
+       "      <td>Aswath</td>\n",
+       "      <td>111</td>\n",
+       "      <td>No</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Handicapped Hand Tricycle</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>P 002</td>\n",
+       "      <td>Shakthi</td>\n",
+       "      <td>22222</td>\n",
+       "      <td>No</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Weed Cutting Machine</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>P 003</td>\n",
+       "      <td>John Doe</td>\n",
+       "      <td>33333</td>\n",
+       "      <td>No</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Weed Cutting Machine</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>P 004</td>\n",
+       "      <td>Smith</td>\n",
+       "      <td>44444</td>\n",
+       "      <td>No</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Weed Cutting Machine</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>P 005</td>\n",
+       "      <td>Andrew</td>\n",
+       "      <td>3636</td>\n",
+       "      <td>No</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Education Aid for Adhithyan</td>\n",
+       "      <td>help</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 18
+   "execution_count": 13
   },
   {
    "metadata": {},
@@ -683,7 +879,7 @@
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "37e6700d7246be33"
+   "id": "e03fb2ef8ed9ed6a"
   }
  ],
  "metadata": {
